Added hide capability to typed.js

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@ bigimg:
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
+
     });
   });
 </script>
 
-<div class="row">
-  <div class="col-sm-12">
+<div class="typed-js-hide">
+  <div class="row">
+    <div class="col-sm-12">
       <div class="text-center">
           <h1>I write about <span class="typed" style="color:#a50509";></span></h1>
       </div>
+    </div>
   </div>
 </div>
 
