Added post: Is light wave or particle

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ bigimg:
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["Technology.","Open Source.","Mathematics.","Space and Universe.","Art.","Ubuntu."],
+      strings: ["Technology.","Open Source.","Mathematics.","Space and Universe.","Science.","Art.","Ubuntu."],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
