--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Let me introduce you to my geek side!
 meta-title: "Hi, I'm Anudit"
 use-site-title: true
 bigimg:
-  - "/img/nebula.jpg" : "The Helix Nebula, 694.7 light years away"
+  - "/img/nebula.jpg" : "The Helix Nebula"
 ---
 
 <!-- Typed.js --> 
