Updated site color scheme

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ bigimg:
   <div class="row">
     <div class="col-sm-12">
       <div class="text-center">
-          <h1>I write about <span class="typed" style="color:#a50509";></span></h1>
+          <h1>I write about <span class="typed" style="color:#890000";></span></h1>
       </div>
     </div>
   </div>
