--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ bigimg:
 ---
 
 <!-- Typed.js --> 
-<script src="/js/jquery-1.11.2.min.js"></script>
+<script src="/js/jquery-1.11.2.min.js"></script> <!-- Typed.js uses old jquery ver -->
 <script src="/js/typed.js" type="text/javascript"></script>
 <script>
   $(function(){
