hide particle.js rendering on phones

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ bigimg:
   });
 </script>
 
-<div class="typed-js-hide">
+<div class="mobile-js-hide">
   <div class="row">
     <div class="col-sm-12">
       <div class="text-center">
