--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ bigimg:
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["Technology.","Open Source.","Mathematics.","Space and Universe.","Science.","Art.","Ubuntu."],
+      strings: ["Technology.","Open Source.","Mathematics.","Space and the Cosmos.","Science.","Art.","Linux."],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
