Full fleged site restructuring

--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Unfortunately, this page doesn't exist.</h1>
-  <h1>However you can take away this nostalgia :)</h1>
+  <h1>The Page you want to explore is Not Available</h1>
+  <h3>However, You can browse from the Navigation bar</h3>
   <br/>
-  <img src="{{ 'assets/img/404-mario.jpg' | relative_url }}" />
+  <img src="{{ 'assets/img/mars_rover_curiosity.png' | relative_url }}" />
 </div>
 
 <script>
