--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: home
-title: Anudit Verma
+title: Nimesh Babu Oli
 subtitle: Let me introduce you to my geek side!
-meta-title: "Hi, I'm Anudit"
+meta-title: "Hi, I'm Nimesh "
 use-site-title: true
 bigimg:
-  - "/assets/img/nebula.jpg" : "The Helix Nebula"
+  - "/assets/img/nimesh_at_rajghat.jpg" : "At Rajghat, New Delhi, India"
+  - "/assets/img/nimesh_at_tilicho.jpg" : "At Tilicho Lake, Manang, Nepal"
 ---
 
 <!-- Typed.js --> 
@@ -14,7 +15,7 @@ bigimg:
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["Technology.","Open Source.","Mathematics.","Space and the Cosmos.","Science.","Art.","Linux."],
+      strings: ["Global Politics.","Nepal.","Travelling.","Model UN.","Engineering.","Economics."],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
