--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Nimesh Babu Oli
-subtitle: Let me introduce you to my geek side!
+subtitle: Global Citizen from Nepal
 meta-title: "Hi, I'm Nimesh "
 use-site-title: true
 bigimg:
