Major Update: Upgraded to Bootstrap 4

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title: Anudit Verma
 subtitle: Let me introduce you to my geek side!
 meta-title: "Hi, I'm Anudit"
 use-site-title: true
-bigimg:
+cover-img:
   - "/assets/img/nebula.jpg" : "The Helix Nebula"
 ---
 
 <!-- Typed.js --> 
-<script src="/assets/js/jquery-1.11.2.min.js"></script> <!-- Typed.js uses old jquery ver -->
+<script src="/assets/js/jquery-1.11.2.min.js"></script> <!-- Typed.js uses old jQuery version, DO NOT REMOVE jquery-1.11.2.min.js -->
 <script src="/assets/js/typed.js" type="text/javascript"></script>
 <script>
   $(function(){
