--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@ subtitle: Let me introduce you to my geek side!
 meta-title: "Hi, I'm Anudit"
 use-site-title: true
 cover-img:
-  - "/assets/img/nebula.jpg" : "The Helix Nebula"
+  - "/assets/img/nebula_NGC_3132.jpg" : "The Southern Ring Nebula"
 ---
 
-<!-- Typed.js --> 
-<script src="/assets/js/jquery-1.11.2.min.js"></script> <!-- Typed.js uses old jQuery version, DO NOT REMOVE jquery-1.11.2.min.js -->
-<script src="/assets/js/typed.js" type="text/javascript"></script>
-<script>
-  $(function(){
-    $(".typed").typed({
-      strings: ["Technology.","Open Source.","Mathematics.","Space and the Cosmos.","Science.","Art.","Linux."],
-      typeSpeed: 100,
-      loop: true,
-      backDelay: 1000
-
-    });
-  });
-</script>
-
+<!-- Typed.js -->
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <div class="mobile-js-hide">
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="text-center">
-          <h1>I write about <span class="typed" style="color:#890000";></span></h1>
-      </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="text-center">
+                <div id="content">
+                    <h1>I write about <span id="typed" style="color:#890000"></span></h1>
+
+                    <div id="typed-strings">
+                        <p>Technology.</p>
+                        <p>Open Source.</p>
+                        <p>Mathematics.</p>
+                        <p>Space and the Cosmos.</p>
+                        <p>Science.</p>
+                        <p>Art.</p>
+                        <p>Linux.</p>
+                    </div>
+
+                    <script>
+                        var typed = new Typed('#typed', {
+                            stringsElement: '#typed-strings',
+                            typeSpeed: 90,
+                            loop: true,
+                            backDelay: 1000
+                        });
+                    </script>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
