Minor Update: Fixed share image for home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ meta-title: "Hi, I'm Anudit"
 use-site-title: true
 cover-img:
   - "/assets/img/nebula_NGC_3132.jpg" : "The Southern Ring Nebula"
+share-img: https://www.anudit.in/assets/img/av.jpg
 ---
 
 <!-- Typed.js -->
