--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Anudit Verma
 subtitle: Let me introduce you to my geek side!
 meta-title: "Hi, I'm Anudit"
 use-site-title: true
+title-off-on-page: true
 cover-img:
   - "/assets/img/nebula_NGC_3132.jpg" : "The Southern Ring Nebula"
 share-img: https://www.anudit.in/assets/img/av.jpg
